--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![картиночка](.\\picture.png)"
+    "![картиночка](./picture.png)"
    ]
   }
  ],
